web-server/plugins/slycat-parameter-image/css/ui.css
/* ... */
#scatterplot .media-layer .frame-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 20px;
  background: black;
}
.frame-button {
  float: right;
  font-size: 16px;
  color: #c8c8c8 !important;
  margin: 3px 2px 0px 2px;
}
.frame-button:hover {
  color: white !important;
  cursor: pointer;
}
.frame-button.close-button {
  float: left;
}
.frame-button.pin-button {
  margin-right: 22px;
  font-size: 13px;
  margin-top: 4px;
}
.frame-button.resize-handle {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 4px 3px;
  font-size: 14px;
}
.frame-button.resize-handle:hover {
  cursor: nwse-resize;
}
.frame-button.type-button {
  margin: 0;
}
/* TypeButton dropdown styles */
.frame-button.type-button.dropup {
  display: inline-block;
  float: right;
}
.frame-button.type-button .type-button-toggle {
  background: none;
  border: none;
  color: #c8c8c8;
  font-size: 12px;
  padding: 0 4px;
  line-height: 20px;
  height: 20px;
  cursor: pointer;
  display: flex;
  align-items: center;
  gap: 4px;
}
.frame-button.type-button .type-button-toggle:hover,
.frame-button.type-button .type-button-toggle:focus {
  color: white;
}
.frame-button.type-button .type-button-label {
  white-space: nowrap;
}
.frame-button.type-button .dropdown-menu {
  font-size: 13px;
  min-width: 120px;
}
.frame-button.type-button .minimize-item {
  display: none;
}
#scatterplot .image-frame.maximized .frame-button.type-button .maximize-item {
  display: none;
}
#scatterplot .image-frame.maximized .frame-button.type-button .minimize-item {
  display: block;
}

#scatterplot .media-layer .reload-button {
  position: absolute;
  left: 1px;
  font-size: 32px;
}

#scatterplot rect.outline:hover,
#scatterplot g.image-frame image.image,
#scatterplot .media-layer .image-frame {
  cursor: move;
}
#scatterplot.resizing,
#scatterplot.resizing .media-layer .image-frame {
  cursor: nwse-resize !important;
}
/* #scatterplot .close-button,
#scatterplot .resize-handle,
#scatterplot .pin-button {
  visibility: hidden;
}
#scatterplot g.open-image:hover .close-button,
#scatterplot g.open-image.resizing .close-button,
#scatterplot g.image-frame:hover .resize-handle,
#scatterplot g.open-image.resizing .resize-handle,
#scatterplot g.hover-image .pin-button,
#scatterplot g.hover-image .resize-handle,
#scatterplot .media-layer .image-frame:hover .resize-handle,
#scatterplot .media-layer .image-frame.resizing .resize-handle,
#scatterplot .media-layer .image-frame:hover .pin-button,
#scatterplot .media-layer .open-image:hover .close-button {
  visibility: visible;
} */
#scatterplot g.legend:hover {
  cursor: move;
}
#scatterplot .image-frame rect.outline {
  shape-rendering: crispEdges;
}
.legend-axis path,
.legend-axis line {
  fill: none;
  stroke: black;
  shape-rendering: crispEdges;
}
.dialogErrorMessage {
  color: red;
}

#scatterplot canvas.points {
  z-index: -1;
}

/* ui layout */
.ui-layout-resizer {
  background: #ddc;
}
.ui-layout-resizer-hover {
  background: #fc6;
}
.ui-layout-resizer-dragging {
  background: #fc6;
}
.ui-layout-toggler {
  background: #ccb;
}
.ui-layout-toggler-hover {
  background: #fc6;
}
.ui-layout-pane,
.ui-layout-container {
  background: white;
  padding: 0;
  border: 0;
  margin: 0;
}

#scatterplot .scatterplot-svg {
  position: absolute;
  cursor: pointer;
}

/* Image Preview */
#scatterplot-pane #image-preview {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  display: none;
  text-align: center;
}
#scatterplot-pane #image-preview-image {
  max-height: 100%;
  max-width: 100%;
}

/* Media Layer */
#scatterplot .media-layer {
  position: absolute;
  top: 0;
  left: 0;
}
#scatterplot .image-frame.html {
  position: absolute;
  background-color: black;
  /* Checkerboard background */
  /* background: repeating-conic-gradient(#808080 0% 25%, white 0% 50%) 50% / 20px 20px; */
  border: 1px solid black;
  height: auto;
  padding-bottom: 20px;
  overflow: hidden;
}
#scatterplot .image-frame.html img {
  display: block;
}
#scatterplot .image-frame.html img.image {
  width: 100%;
  height: auto;
}
#scatterplot .image-frame.html video {
  display: block;
  width: 100%;
  height: auto;
  cursor: auto;
}
#scatterplot .image-frame .loading-image {
  margin: auto;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;

  background-image: url("../../../img/ajax-loader.gif");
  background-repeat: no-repeat;
  background-position: 50% 50%;
}
#scatterplot .image-frame.selected {
  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.8);
}

/* Sliders */
#sliders-pane {
  white-space: nowrap;
  overflow: auto;
  background: #e7e7e7;
}
#sliders {
  margin: 20px 0 0 20px;
}
.slycat-range-slider.vertical {
  display: inline-block;
  margin: 28px 0 22px 0;
  left: 20px;
}
/* undoing vertical class cause it's making vertical sliders horizontal */
.slycat-range-slider.vertical {
  transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  -webkit-transform: rotate(0deg);
}
.slycat-pim-filter {
  position: relative;
  display: inline-block;
  width: 115px;
  padding-left: 5px;
  margin-right: 20px;
  background-color: white;
}
.category-filter {
  position: relative;
  display: inline-block;
  width: 115px;
  min-width: 115px;
  padding-left: 5px;
  margin-right: 20px;
}
.category-filter.auto-width {
  width: auto;
}
.slycat-pim-filter .button {
  cursor: pointer;
  position: absolute;
}
.slycat-pim-filter .close-button {
  top: 4px;
  left: 6px;
}
.slycat-pim-filter .reset-button {
  position: static;
}
.category-filter .auto-width-button {
  top: 5px;
  right: 5px;
  font-size: 12px;
}
.slycat-pim-filter .invert-button,
.slycat-pim-filter .select-all-button,
.slycat-pim-filter .select-none-button,
.slycat-pim-filter .auto-width-button,
.slycat-pim-filter .null-button {
  position: absolute;
}
.slycat-pim-filter .fa-arrows-up-down {
  left: 28px;
  bottom: 7px;
}
/* ... */

